bisaga dark theme modifications

--- a/scss/bootstrap-dark.scss
+++ b/scss/bootstrap-dark.scss
@@ -1,5 +1,6 @@
- @import 'dark-variables';
- @import 'dark-mixins';
+@import 'bisaga-variables';
+@import 'dark-variables';
+@import 'dark-mixins';
 
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
