--- a/scss/_bisaga-variables.scss
+++ b/scss/_bisaga-variables.scss
@@ -51,6 +51,8 @@ $navbar-toggler-padding-y: .1rem;
 $navbar-toggler-padding-x: .1rem;
 $label-margin-bottom: .15rem;
 $dropdown-link-hover-bg: $light;       
+$dropdown-link-active-bg: $dark;
+$dropdown-link-active-color:$light;
 
 $breadcrumb-bg: $gray-800;
 $breadcrumb-divider-color: $gray-100;
